test/samples/error/err_undefined_function_arg_symbol.w
func f( x:int) :int{
	return x
}

f(y)